--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,5 @@
 @import "fonts";
-@import "libs";
+// @import "libs";
 @import "vars";
-@import "../../node_modules/bootstrap/scss/bootstrap";
+// @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "main";
