update files, add img

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -4,4 +4,5 @@
 @include font-face("SegoeUI-ex", "../fonts/SegoeUIBold/SegoeUIBold", bold);
 @include font-face("SegoeUI-ex", "../fonts/SegoeUISemiBold/SegoeUISemiBold", 600);
 @include font-face("SegoeUI-ex", "../fonts/SegoeUILight/SegoeUILight", 300);
+@include font-face("Bitter-ex", "../fonts/BitterBold/BitterBold", bold);
 @include font-face("MyriadPro-ex", "../fonts/MyriadProRegular/MyriadProRegular");
