--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,4 +2,14 @@
 // @import "libs";
 @import "vars";
 // @import "../../node_modules/bootstrap/scss/bootstrap";
-@import "main";
+@import "body";
+@import "siteHeader";
+@import "servises";
+@import "myContent";
+@import "portfolioContent";
+@import "justDefaultSectionContent";
+@import "twitter";
+@import "WhoIsContent";
+@import "TestimonialsContent";
+@import "contact";
+@import "myFooter";
